fix: 更新社区支持描述中的家庭数量从300到500
docs: 添加Z Garden Hotel的图片和模态框

--- a/index.html
+++ b/index.html
@@ -374,7 +374,55 @@
                                     <p class="card-text">Gentleman Cut</p>
 
                                 </div>
-
+                                <div class="col-6 p-1">
+                                    <!-- Image trigger modal -->
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#zGardenHotelModal">
+                                        <div style="aspect-ratio: 6 / 5; overflow: hidden;">
+                                            <img class="w-100 h-100" style="object-fit: cover;"
+                                                src="images/milan-grace/cover.jpg" alt="Z Garden Hotel" />
+                                        </div>
+                                    </a>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="zGardenHotelModal" tabindex="-1"
+                                        aria-labelledby="zGardenHotelModalLabel" aria-hidden="true">
+                                        <div
+                                            class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl modal-xxl">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h6 class="modal-title" id="zGardenHotelModalLabel">Z Garden Hotel
+                                                    </h6>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="container-fluid">
+                                                        <!-- content -->
+                                                        <div class="row">
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/milan-grace/1.webp"
+                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"
+                                                                    alt="Z Garden Hotel 1" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/milan-grace/3.webp"
+                                                                    alt="Z Garden Hotel 3"
+                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/milan-grace/4.webp" alt="Milan Grace 4"
+                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p class="card-text">Z Garden Hotel</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -613,55 +661,7 @@
                                     </div>
                                     <p class="card-text">Janu Coffee</p>
                                 </div>
-                                <div class="col-6 p-1">
-                                    <!-- Image trigger modal -->
-                                    <a href="#" data-bs-toggle="modal" data-bs-target="#zGardenHotelModal">
-                                        <div style="aspect-ratio: 6 / 5; overflow: hidden;">
-                                            <img class="w-100 h-100" style="object-fit: cover;"
-                                                src="images/milan-grace/1.webp" alt="Z Garden Hotel" />
-                                        </div>
-                                    </a>
-                                    <!-- Modal -->
-                                    <div class="modal fade" id="zGardenHotelModal" tabindex="-1"
-                                        aria-labelledby="zGardenHotelModalLabel" aria-hidden="true">
-                                        <div
-                                            class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl modal-xxl">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h6 class="modal-title" id="zGardenHotelModalLabel">Z Garden Hotel
-                                                    </h6>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <div class="container-fluid">
-                                                        <!-- content -->
-                                                        <div class="row">
-                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
-                                                                <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/milan-grace/1.webp"
-                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"
-                                                                    alt="Z Garden Hotel 1" />
-                                                            </div>
-                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
-                                                                <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/milan-grace/3.webp"
-                                                                    alt="Z Garden Hotel 3"
-                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;" />
-                                                            </div>
-                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
-                                                                <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/milan-grace/4.webp" alt="Milan Grace 4"
-                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="card-text">Z Garden Hotel</p>
-                                </div>
+
 
                             </div>
                         </div>
@@ -2015,7 +2015,7 @@
                     <h3 data-i18n="csr.communitySupport.title">Community Support Network</h3>
                     <p data-i18n="csr.communitySupport.description">With around 500 employees, H Hospitality Group is
                         proud to contribute to the livelihood of around
-                        300 families. More than 70% of our workforce are locals from El Nido, showcasing our genuine
+                        500 families. More than 70% of our workforce are locals from El Nido, showcasing our genuine
                         passion for supporting the community by providing decent jobs with competitive pay and benefits.
                         We believe that offering stable job opportunities and a nurturing work environment is essential
                         to building a thriving community. Our employees are the backbone of our success, and their
