feat: 添加HTT Tour封面图片并更新Z Garden Hotel图片格式
为HTT Tour添加封面图片，并将Z Garden Hotel的封面图片从jpg格式更新为webp格式以优化加载性能

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#zGardenHotelModal">
                                         <div style="aspect-ratio: 6 / 5; overflow: hidden;">
                                             <img class="w-100 h-100" style="object-fit: cover;"
-                                                src="images/milan-grace/cover.jpg" alt="Z Garden Hotel" />
+                                                src="images/milan-grace/cover.webp" alt="Z Garden Hotel" />
                                         </div>
                                     </a>
                                     <!-- Modal -->
@@ -422,6 +422,18 @@
                                         </div>
                                     </div>
                                     <p class="card-text">Z Garden Hotel</p>
+                                </div>
+
+                                <div class="col-6 p-1">
+                                    <!-- Image trigger modal -->
+                                    <a href="#">
+                                        <div style="aspect-ratio: 6 / 5; overflow: hidden;">
+                                            <img class="w-100 h-100" style="object-fit: cover;"
+                                                src="images/htt-tour/cover.webp" />
+                                        </div>
+                                    </a>
+
+                                    <p class="card-text">HTT Tour</p>
                                 </div>
                             </div>
                         </div>
