feat: 在时间轴中添加2027年仓库和总部图片
- 为2027年时间轴条目新增仓库图片展示
- 在2024年时间轴条目中新增总部大楼图片
- 添加对应的图片资源文件

--- a/index.html
+++ b/index.html
@@ -334,7 +334,28 @@
                 </div>
             </div>
             <div class="main-timeline">
+                <div class="timeline right year2027">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            <h3>2027</h3>
+                            <div class="row gx-0  align-items-top">
 
+                                <div class="col-6 p-1">
+                                    <!-- Image trigger modal -->
+                                    <a href="#">
+                                        <div style="aspect-ratio: 6 / 5; overflow: hidden;">
+                                            <img class="w-100 h-100" style="object-fit: cover;"
+                                                src="images/warehouse/warehouse.png" />
+                                        </div>
+                                    </a>
+
+                                    <p class="card-text">warehouse</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="timeline left year2026">
                     <div class="card">
                         <div class="card-body p-4">
@@ -435,6 +456,19 @@
 
                                     <p class="card-text">HTT Tour</p>
                                 </div>
+
+                                <div class="col-6 p-1">
+                                    <!-- Image trigger modal -->
+                                    <a href="#">
+                                        <div style="aspect-ratio: 6 / 5; overflow: hidden;">
+                                            <img class="w-100 h-100" style="object-fit: cover;"
+                                                src="images/hq/hhq.webp" />
+                                        </div>
+                                    </a>
+
+                                    <p class="card-text">Headquarters</p>
+                                </div>
+
                             </div>
                         </div>
                     </div>
