chore: 更新网站图片与文本内容
- 为 Z Garden Hotel 新增展示图片
- 将 "warehouse" 和 "Headquarters" 的文本描述更新为 "HHG warehouse" 和 "HHG Headquarters"
- 移除部分图片链接的冗余 href 属性

--- a/index.html
+++ b/index.html
@@ -342,14 +342,14 @@
 
                                 <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
-                                    <a href="#">
+                                    <a>
                                         <div style="aspect-ratio: 6 / 5; overflow: hidden;">
                                             <img class="w-100 h-100" style="object-fit: cover;"
                                                 src="images/warehouse/warehouse.png" />
                                         </div>
                                     </a>
 
-                                    <p class="card-text">warehouse</p>
+                                    <p class="card-text">HHG warehouse </p>
                                 </div>
 
                             </div>
@@ -419,6 +419,24 @@
                                                     <div class="container-fluid">
                                                         <!-- content -->
                                                         <div class="row">
+
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/zgarden/1.jpg"
+                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"
+                                                                    alt="Z Garden Hotel 1" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/zgarden/2.jpg" alt="Z Garden Hotel 3"
+                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/zgarden/3.jpg" alt="Z Garden Hotel 4"
+                                                                    style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;" />
+                                                            </div>
+
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/milan-grace/1.webp"
@@ -447,7 +465,7 @@
 
                                 <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
-                                    <a href="#">
+                                    <a>
                                         <div style="aspect-ratio: 6 / 5; overflow: hidden;">
                                             <img class="w-100 h-100" style="object-fit: cover;"
                                                 src="images/htt-tour/cover.webp" />
@@ -459,14 +477,14 @@
 
                                 <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
-                                    <a href="#">
+                                    <a>
                                         <div style="aspect-ratio: 6 / 5; overflow: hidden;">
                                             <img class="w-100 h-100" style="object-fit: cover;"
                                                 src="images/hq/hhq.webp" />
                                         </div>
                                     </a>
 
-                                    <p class="card-text">Headquarters</p>
+                                    <p class="card-text">HHG Headquarters</p>
                                 </div>
 
                             </div>
