feat: 添加新项目"The New S Resort"图片和展示模态框
在项目展示区域的2026年部分，新增"The New S Resort"项目卡片。添加了6张JPG格式和6张WebP格式的图片资源，用于展示该项目。同时在HTML中集成了模态框，点击卡片可以查看大图。

--- a/index.html
+++ b/index.html
@@ -351,7 +351,6 @@
 
                                     <p class="card-text">HHG warehouse </p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -361,6 +360,9 @@
                         <div class="card-body p-4">
                             <h3>2026</h3>
                             <div class="row gx-0  align-items-top">
+
+
+
                                 <div class="col-6 p-1">
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#gentlemanCutModal">
                                         <div style="aspect-ratio: 6 / 5; overflow: hidden;">
@@ -486,7 +488,66 @@
 
                                     <p class="card-text">HHG Headquarters</p>
                                 </div>
+                                <div class="col-6 p-1">
+                                    <!-- Image trigger modal -->
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#newsresortModal">
+                                        <img class="img-fluid mb-lg-2 mb-2" src="images/new_sresort/1.webp"
+                                            alt="The New S Resort" /> </a>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="newsresortModal" tabindex="-1"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div
+                                            class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h6 class="modal-title" id="exampleModalLabel">The New S Resort
+                                                    </h6>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="container-fluid">
+                                                        <!-- content -->
+                                                        <div class="row">
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/new_sresort/1.webp"
+                                                                    alt="The New S Resort" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/new_sresort/2.webp"
+                                                                    alt="The New S Resort" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/new_sresort/3.webp"
+                                                                    alt="The New S Resort" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/new_sresort/4.webp"
+                                                                    alt="The New S Resort" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/new_sresort/5.webp"
+                                                                    alt="The New S Resort" />
+                                                            </div>
+                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
+                                                                <img class="img-fluid mb-lg-2 mb-2"
+                                                                    src="images/new_sresort/6.webp"
+                                                                    alt="The New S Resort" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
 
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p class="card-text">The New S Resort</p>
+                                </div>
                             </div>
                         </div>
                     </div>
